// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper Snapshots should match snapshot with accessibility props 1`] = `
<RCTView
  accessibilityLabel="Wrapper container"
  accessible={true}
  className="flex-1 px-[16px]"
  testID="wrapper"
>
  Content
</RCTView>
`;

exports[`Wrapper Snapshots should match snapshot with all props combined 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
>
  <RCTView
    accessibilityLabel="Custom wrapper"
    accessible={true}
    className="flex-grow px-[24px] flex-grow flex-none custom-class"
    style={
      {
        "marginBottom": 16,
      }
    }
    testID="wrapper"
  >
    Content
  </RCTView>
</RNCSafeAreaView>
`;

exports[`Wrapper Snapshots should match snapshot with basic props 1`] = `
<RCTView
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;

exports[`Wrapper Snapshots should match snapshot with custom className 1`] = `
<RCTView
  className="flex-1 px-[16px] custom-class"
>
  Content
</RCTView>
`;

exports[`Wrapper Snapshots should match snapshot with custom style 1`] = `
<RCTView
  className="flex-1 px-[16px]"
  style={
    {
      "marginBottom": 8,
    }
  }
>
  Content
</RCTView>
`;

exports[`Wrapper Snapshots should match snapshot with edges prop 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
>
  <RCTView
    className="flex-1 px-[16px]"
  >
    Content
  </RCTView>
</RNCSafeAreaView>
`;

exports[`Wrapper Snapshots should match snapshot with fill prop 1`] = `
<RCTView
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;

exports[`Wrapper Snapshots should match snapshot with grow prop 1`] = `
<RCTView
  className="flex-grow px-[16px] flex-grow flex-none"
>
  Content
</RCTView>
`;

exports[`Wrapper Snapshots should match snapshot with hasSafeArea prop 1`] = `
<RNCSafeAreaView
  className="flex-1 px-0"
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "additive",
    }
  }
>
  <RCTView
    className="flex-1 px-[16px]"
  >
    Content
  </RCTView>
</RNCSafeAreaView>
`;

exports[`Wrapper Snapshots should match snapshot with px prop 1`] = `
<RCTView
  className="flex-1 px-[16px]"
>
  Content
</RCTView>
`;
